Import of TEEJAY/HTML-FormHandlerX-Form-JQueryValidator-0.03 from CPAN.
gitpan-cpan-distribution: HTML-FormHandlerX-Form-JQueryValidator
gitpan-cpan-version:      0.03
gitpan-cpan-path:         TEEJAY/HTML-FormHandlerX-Form-JQueryValidator-0.03.tar.gz
gitpan-cpan-author:       TEEJAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension HTML::FormHandlerX::Form::JQueryValidator.
 
+0.03  Thu Sep 13
+	Fix to undeclared dependancy on URI (thanks cpan-testers!)
+
 0.02  Tue Sept 11
         fix to bug [rt.cpan.org #79323] Undeclared dependency on JSON
 
