Import of TEEJAY/HTML-FormHandlerX-Form-JQueryValidator-0.05 from CPAN.
gitpan-cpan-distribution: HTML-FormHandlerX-Form-JQueryValidator
gitpan-cpan-version:      0.05
gitpan-cpan-path:         TEEJAY/HTML-FormHandlerX-Form-JQueryValidator-0.05.tar.gz
gitpan-cpan-author:       TEEJAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension HTML::FormHandlerX::Form::JQueryValidator.
 
+0.05  Thu Nov 15
+	Add missing files to MANIFEST
+
 0.04  Wed Nov 14
 	Replace unescape with decodeURIComponent
         Added unit tests
